force/src/objects/Milestone_Deliverables__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorized_Sign_Off__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the person with authorization to approve these deliverable.</inlineHelpText>
        <label>Deliverable Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>% Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%: Not Started</fullName>
                </value>
                <value>
                    <fullName>25%: Draft Created</fullName>
                </value>
                <value>
                    <fullName>50%: Draft Reviewed by Stakeholders</fullName>
                </value>
                <value>
                    <fullName>75%: Stakeholder Input Incorporated into Draft</fullName>
                </value>
                <value>
                    <fullName>90%: Final Draft Submitted for Sign-off</fullName>
                </value>
                <value>
                    <fullName>100%: Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contingent_Sign_Off_Notes__c</fullName>
        <inlineHelpText>Document assumptions, dependencies, and activities that will be performed in a future state of the project.</inlineHelpText>
        <label>Contingent Sign-Off Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deliverable_Name__c</fullName>
        <label>Deliverable Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Action_Decision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Key Action/Decision</label>
        <referenceTo>Key_Action_Decision__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Deliverables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejection_Explanation__c</fullName>
        <label>Rejection Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Review_List__c</fullName>
        <label>Stakeholder Review List</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the approval process for the Deliverable.</inlineHelpText>
        <label>Deliverable Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deliverables</label>
    <listViews>
        <fullName>All_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Complete__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Deliverables</label>
    </listViews>
    <listViews>
        <fullName>All_Deliverables_w_no_Release</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Complete__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Deliverables w no Release</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Complete__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Complete__c</field>
            <operation>notEqual</operation>
            <value>100%: Complete</value>
        </filters>
        <label>All Open Deliverables</label>
    </listViews>
    <listViews>
        <fullName>All_Overdue_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Complete__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Planned_End_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>notEqual</operation>
            <value>100%: Complete</value>
        </filters>
        <label>All Overdue Deliverables</label>
    </listViews>
    <listViews>
        <fullName>Knowledge_Release_1_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Complete__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Knowledge Release 1</value>
        </filters>
        <label>Knowledge Release 1 Deliverables</label>
    </listViews>
    <listViews>
        <fullName>Maintenance_Release_1_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Complete__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Maintenance 1</value>
        </filters>
        <label>Maintenance Release 1 Deliverables</label>
    </listViews>
    <listViews>
        <fullName>My_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Milestone__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>Complete__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Deliverables</label>
    </listViews>
    <listViews>
        <fullName>Release_10_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Complete__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 10</value>
        </filters>
        <label>Release 10 Deliverables</label>
    </listViews>
    <listViews>
        <fullName>Release_1_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Complete__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 1</value>
        </filters>
        <label>Release 1 Deliverables</label>
    </listViews>
    <listViews>
        <fullName>Release_2_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Complete__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 2</value>
        </filters>
        <label>Release 2 Deliverables</label>
    </listViews>
    <listViews>
        <fullName>Release_3_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Complete__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 3</value>
        </filters>
        <label>Release 3 Deliverables</label>
    </listViews>
    <listViews>
        <fullName>Release_4_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Complete__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 4</value>
        </filters>
        <label>Release 4 Deliverables</label>
    </listViews>
    <listViews>
        <fullName>Release_5_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Complete__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 5</value>
        </filters>
        <label>Release 5 Deliverables</label>
    </listViews>
    <listViews>
        <fullName>Release_6_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Complete__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 6</value>
        </filters>
        <label>Release 6 Deliverables</label>
    </listViews>
    <listViews>
        <fullName>Release_7_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Authorized_Sign_Off__c</columns>
        <columns>Stakeholder_Review_List__c</columns>
        <columns>Complete__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 7</value>
        </filters>
        <label>Release 7 Deliverables</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Deliverable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>